// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartOverDropdownTest render 1`] = `
<DocumentFragment>
  <div>
    <mock-insightscommandbutton
      arialabel="start over menu"
      componentref="[object Object]"
      iconprops="[object Object]"
      menuiconprops="[object Object]"
      text="Start over"
    />
  </div>
</DocumentFragment>
`;

exports[`StartOverDropdownTest render ContextualMenu 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-label="start over menu"
      class="ms-Button ms-Button--action ms-Button--command root-109"
      data-is-focusable="true"
      type="button"
    >
      <span
        class="ms-Button-flexContainer flexContainer-110"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden="true"
          class="ms-Icon root-105 ms-Button-icon icon-112"
          data-icon-name="Refresh"
        />
        <span
          class="ms-Button-textContainer textContainer-111"
        >
          <span
            class="ms-Button-label label-113"
            id="id__0"
          >
            Start over
          </span>
        </span>
        <i
          aria-hidden="true"
          class="ms-Icon root-105 ms-Button-menuIcon menuIcon-114"
          data-icon-name="ChevronDown"
        />
      </span>
    </button>
    <span
      class="ms-layer"
    />
  </div>
</DocumentFragment>
`;

exports[`StartOverDropdownTest render with dropdown on left 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-label="start over menu"
      class="ms-Button ms-Button--action ms-Button--command root-109"
      data-is-focusable="true"
      type="button"
    >
      <span
        class="ms-Button-flexContainer flexContainer-110"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden="true"
          class="ms-Icon root-105 ms-Button-icon icon-112"
          data-icon-name="Refresh"
        />
        <span
          class="ms-Button-textContainer textContainer-111"
        >
          <span
            class="ms-Button-label label-113"
            id="id__30"
          >
            Start over
          </span>
        </span>
        <i
          aria-hidden="true"
          class="ms-Icon root-105 ms-Button-menuIcon menuIcon-114"
          data-icon-name="ChevronRight"
        />
      </span>
    </button>
    <span
      class="ms-layer"
    />
  </div>
</DocumentFragment>
`;

exports[`StartOverDropdownTest render: ContextualMenu props 1`] = `undefined`;

exports[`StartOverDropdownTest render: InsightsCommandButton props 1`] = `
{
  "ariaLabel": "start over menu",
  "componentRef": {},
  "iconProps": {
    "iconName": "Refresh",
  },
  "menuIconProps": {
    "iconName": "ChevronDown",
  },
  "onClick": [Function],
  "text": "Start over",
}
`;

exports[`StartOverDropdownTest render: action button menu props 1`] = `undefined`;
